@@ -6,6 +6,7 @@ Post-v21.03.0
     expected to scale better than the C implementation, for large deployments.
     (This may take testing and tuning to be effective.)  This version of OVN
     requires DDLog 0.36.
+  - Bypass connection tracking for ACL "allow" action processing.
 
 OVN v21.03.0 - 5 Mar 2020
 -------------------------
